  See the Export button on the sample file /samples/Sample_pdf/list_detail_MySQL.html.
- SwiftMailer was removed, Symphony Mailer is introduced to send e-mail.
- The YAML based definition file can work as like PHP's one. The file name of yaml file can set as the same as page file.
  In the script tag to import the framework, the src attribute has to refer the index.php of the repository root.
[BUG FIX] In same case of using aggregation-select/from the error happened about the view or table didn't exist.
[INFO] About sample SQL files in the dist-docs directory, their extensions changed to .sql from .txt.

Ver.10 (October 12, 2022)
- Auto saving for INPUT and TEXTAREA element. Customizing in JavaScript code and their default value are:
  IMLibElement.textAutoSave = true // Auto saving availability
  IMLibElement.checkingSeconds = 1 // Repeating period in seconds
  IMLibElement.waitSeconds = 5  // Waiting seconds to save from last input
- Revert the Initial Value feature is working for INPUT and TEXTAREA element with Control+Shift+Z.
- The 'Gear-style' progress information starts with a little bit after. Delay time can customize in JavaScript code.
  INTERMediatorOnPage.progressStartDelay = 300 // Delay time in milliseconds
- The Service Server by node is not booted in default settings. If you need to use it, you have to modify the setting
  in the params.php file. The Service Server requires for server side validation, and synchronizing with clients.
- The _im_seq pesudo field appears in context. It shows the sequential number in the context records from 1.
- The _im_count pesudo field appears in context. It shows how many records in the context.
- In the INTERMediatorOnPage class buttonClassCopy, buttonClassDelete, buttonClassInsert, buttonClassMaster and
  buttonClassBackNavi properties are defined. These can be set the additional class values to relevant buttons.
- In where clause of generated sql, the values for numeric fields express by numeric not string.