@@ -99,6 +99,11 @@ const INTERMediator = {
   additionalFieldValueOnUpdate: {},
   /**
    * @public
+   * @type {object}
+   */
+  additionalFieldValueOnDelete: {},
+  /**
+   * @public
    * @type {int}
    */
   waitSecondsAfterPostMessage: 4,
