@@ -16,8 +16,11 @@ Ver.11 (in development)
 - SwiftMailer was removed, Symphony Mailer is introduced to send e-mail.
 - The YAML based definition file can work as like PHP's one. The file name of yaml file can set as the same as page file.
   In the script tag to import the framework, the src attribute has to refer the index.php of the repository root.
-[BUG FIX] In same case of using aggregation-select/from the error happened about the view or table didn't exist.
-[INFO] About sample SQL files in the dist-docs directory, their extensions changed to .sql from .txt.
+- Page localizing is available. The $terms variable in params.php or terms key in the option area of a definition file,
+  also using data-im-locale attribute for nodes on a page file.
+- [BUG FIX] In same case of using aggregation-select/from the error happened about the view or table didn't exist.
+- [BUG FIX] INTERMediator.additionalFieldValueOnDelete uses in the Definition File editor, so retrieved it.
+- [INFO] About sample SQL files in the dist-docs directory, their extensions changed to .sql from .txt.
 
 Ver.10 (October 12, 2022)
 - Auto saving for INPUT and TEXTAREA element. Customizing in JavaScript code and their default value are:
